<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Piedra Papel Tijeras"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/ivpcpu"
            android:layout_width="136dp"
            android:layout_height="140dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/ivDescription"
            app:layout_constraintBottom_toTopOf="@+id/bpiedra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.652"
            app:srcCompat="@mipmap/question_foreground" />

        <ImageView
            android:id="@+id/ivplayer"
            android:layout_width="136dp"
            android:layout_height="140dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/ivDescription"
            app:layout_constraintBottom_toTopOf="@+id/bpiedra"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.652"
            app:srcCompat="@mipmap/question_foreground" />

        <Button
            android:id="@+id/bpiedra"
            android:layout_width="100dp"
            android:layout_height="53dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="236dp"
            android:text="@string/piedra"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bpapel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bpapel"
            android:layout_width="100dp"
            android:layout_height="53dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="236dp"
            android:text="@string/papel"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btijeras"
            app:layout_constraintStart_toEndOf="@+id/bpiedra" />

        <Button
            android:id="@+id/btijeras"
            android:layout_width="100dp"
            android:layout_height="53dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="236dp"
            android:text="@string/tijeras"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bpapel" />

        <TextView
            android:id="@+id/tvpuntuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoInicial"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/ivplayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/breiniciar"
            android:layout_width="115dp"
            android:layout_height="53dp"
            android:text="@string/reset"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bpapel"
            app:layout_constraintVertical_bias="0.497" />

        <TextView
            android:id="@+id/tvVs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/bpapel"
            app:layout_constraintEnd_toStartOf="@+id/ivpcpu"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toEndOf="@+id/ivplayer"
            app:layout_constraintTop_toBottomOf="@+id/tvpuntuacion"
            app:layout_constraintVertical_bias="0.506" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>